--- a/mm/titleAndAuthors.tex
+++ b/mm/titleAndAuthors.tex
@@ -8,7 +8,7 @@
 \author[A]{M. Boyer}
 \author[A]{J. Ball}
 \author[A]{Q. Bertrand}
-\author[A]{D Bessin}
+\author[A]{D Besin}
 \author[A]{F Boss\`u}
 \author[A]{R. Boudouin}
 \author[A]{G. Christiaens}
