--- a/mm/mm.tex
+++ b/mm/mm.tex
@@ -22,14 +22,14 @@
 \date{\today}
 
 \input{overview}
-\input{requirements}
-\input{design}
-\input{hardware}
+% \input{requirements}
+% \input{design}
+% \input{hardware}
 \input{electronics}
 \input{readout}
-\input{calibration}
-\input{reconstruction}
-\input{simulation}
+% \input{calibration}
+% \input{reconstruction}
+% \input{simulation}
 \input{performance}
 \input{conclusionsAndAcknowledgement}
 
